--- a/styles.css
+++ b/styles.css
@@ -11,10 +11,8 @@
 }
 .x{
     background-image: url("./assets/backgrounds/s_image.jpg");
-    text-align: center;
     background-size: cover;
-    height: 300px;
-    color: antiquewhite;
+    height: 300;
     padding-top: 100px;
 
 }
@@ -30,7 +28,7 @@
 }
 .d{
     
-    background-image: url("../assets/backgrounds/c_image.jpg");
+    background-image: url("./assets/backgrounds/c_image.jpg");
     height:50vh ;
 }
 .name{
@@ -45,21 +43,17 @@
     margin-left: 25%;
     background-color: transparent
 }
-#us{
+/* #us{
     background-color: transparent;
     height: 30%px;
     width: 300px;
     margin-right: 100%;
     margin: 2px solid white;
-}
+} */
 .message{
 
     margin-left: 40%;
     width: 200px;}
-
-   #user{background-color: transparent;
-
-}
 #submit buton{
-    color: white
+    color: white;
 }
