--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,20 @@
 .img{
-    background-image: url("./Delani-studio/assets/backgrounds/h_img.jpg");
+    background-image: url("./assets/backgrounds/h_img.jpg");
      color: antiquewhite;
     text-align: center;
     background-size: cover;
-    height: 100vh;
+    height: 680px;
     padding-top: 250px;
 }
 .pic{
     text-align: center
 }
 .x{
-    background-image: url("./Delani-studio/assets/backgrounds/s_image.jpg");
+    background-image: url("./assets/backgrounds/s_image.jpg");
+    text-align: center;
     background-size: cover;
-    height: 300;
+    height: 300px;
+    color: antiquewhite;
     padding-top: 100px;
 
 }
@@ -28,7 +30,7 @@
 }
 .d{
     
-    background-image: url("./Delani-studio/assets/backgrounds/c_image.jpg");
+    background-image: url("./assets/backgrounds/c_image.jpg");
     height:50vh ;
 }
 .name{
@@ -36,24 +38,29 @@
     margin-right: 40%;
     text-align: center;
     padding-left: 3px;
-
+    background-color: transparent;
 }
 .email{
     margin: 2px solid white;
     margin-left: 25%;
     background-color: transparent
 }
-/* #us{
+#us{
     background-color: transparent;
-    height: 30%px;
-    width: 300px;
+    height: 20vh;
+
+
     margin-right: 100%;
     margin: 2px solid white;
-} */
+}
 .message{
 
     margin-left: 40%;
     width: 200px;}
-#submit buton{
-    color: white;
+
+   #user{background-color: transparent;
+
+}
+#submit{
+    color: white
 }
